--- a/.gitignore
+++ b/.gitignore
@@ -127,4 +127,6 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
-/datasets/kaggle/paultimothymooney/nasdaq
+/datasets/kaggle
+/datasets/*.csv
+/datasets/*.json
