--- a/api/app.yaml
+++ b/api/app.yaml
@@ -4,3 +4,6 @@ service: predictor
 
 # workers = 1 for F1, workers = 2 for F2, workers = 4 for F4
 entrypoint: gunicorn --workers 1 --worker-class uvicorn.workers.UvicornWorker --bind :$PORT app.main:application
+
+inbound_services:
+- warmup
