Fixed deploy error.

--- a/api/.gcloudignore
+++ b/api/.gcloudignore
@@ -12,6 +12,7 @@
 # below:
 .git
 .gitignore
+.venv
 
 # Python pycache:
 __pycache__/
@@ -20,3 +21,4 @@ __pycache__/
 
 local.py
 micro-services-378415-83c3c6430e0a.json
+requirements-dev.txt
